@@ -31,6 +31,7 @@ import java.io.StringWriter;
 import java.io.Writer;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.EnumSet;
@@ -40,6 +41,9 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.CountDownLatch;
+import javax.lang.model.SourceVersion;
+import javax.swing.event.ChangeListener;
+import java.util.stream.Collectors;
 import javax.swing.text.Document;
 import org.netbeans.api.java.lexer.JavaTokenId;
 import org.netbeans.api.java.source.Task;
@@ -47,16 +51,19 @@ import org.netbeans.api.java.source.CompilationController;
 import org.netbeans.api.java.source.JavaSource;
 import org.netbeans.api.java.source.JavaSource.Phase;
 import org.netbeans.api.java.source.SourceUtilsTestUtil;
+import org.netbeans.api.java.source.TestUtilities;
 import org.netbeans.api.java.source.TreePathHandle;
 import org.netbeans.api.lexer.Language;
 import org.netbeans.api.lexer.Token;
 import org.netbeans.junit.NbTestCase;
 import org.netbeans.spi.editor.hints.ErrorDescription;
+import org.netbeans.spi.java.queries.CompilerOptionsQueryImplementation;
 import org.openide.cookies.EditorCookie;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
 import org.openide.filesystems.MIMEResolver;
 import org.openide.loaders.DataObject;
+import org.openide.util.Pair;
 
 /**
  *
@@ -159,7 +166,29 @@ public abstract class TestBase extends NbTestCase {
     }
 
     protected void performTest(Input input, final Performer performer, boolean doCompileRecursively, Validator validator) throws Exception {
-        SourceUtilsTestUtil.prepareTest(new String[] {"org/netbeans/modules/java/editor/resources/layer.xml"}, new Object[] {new MIMEResolverImpl()});
+        SourceUtilsTestUtil.prepareTest(new String[] {"org/netbeans/modules/java/editor/resources/layer.xml"}, new Object[] {
+            new MIMEResolverImpl(),
+            new CompilerOptionsQueryImplementation() {
+                @Override
+                public CompilerOptionsQueryImplementation.Result getOptions(FileObject file) {
+                    if (testSourceFO == file) {
+                        return new CompilerOptionsQueryImplementation.Result() {
+                            @Override
+                            public List<? extends String> getArguments() {
+                                return extraOptions;
+                            }
+
+                            @Override
+                            public void addChangeListener(ChangeListener listener) {}
+
+                            @Override
+                            public void removeChangeListener(ChangeListener listener) {}
+                        };
+                    }
+                    return null;
+                }
+            }
+        });
         
 	FileObject scratch = SourceUtilsTestUtil.makeScratchDir(this);
 	FileObject cache   = scratch.createFolder("cache");
@@ -230,8 +259,74 @@ public abstract class TestBase extends NbTestCase {
         validator.validate(out.toString());
     }
     
-    protected ColoringAttributes getColoringAttribute() {
-        return ColoringAttributes.UNUSED;
+    protected void performTest(String fileName, String code, Performer performer, String... expected) throws Exception {
+        performTest(fileName, code, performer, false, expected);
+    }
+
+    protected void performTest(String fileName, String code, Performer performer, boolean doCompileRecursively, String... expected) throws Exception {
+        SourceUtilsTestUtil.prepareTest(new String[] {"org/netbeans/modules/java/editor/resources/layer.xml"}, new Object[] {new MIMEResolverImpl()});
+
+	FileObject scratch = SourceUtilsTestUtil.makeScratchDir(this);
+	FileObject cache   = scratch.createFolder("cache");
+
+        File wd         = getWorkDir();
+        File testSource = new File(wd, "test/" + fileName + ".java");
+
+        testSource.getParentFile().mkdirs();
+        TestUtilities.copyStringToFile(testSource, code);
+
+        testSourceFO = FileUtil.toFileObject(testSource);
+
+        assertNotNull(testSourceFO);
+
+        if (sourceLevel != null) {
+            SourceUtilsTestUtil.setSourceLevel(testSourceFO, sourceLevel);
+        }
+
+        File testBuildTo = new File(wd, "test-build");
+
+        testBuildTo.mkdirs();
+
+        FileObject srcRoot = FileUtil.toFileObject(testSource.getParentFile());
+        SourceUtilsTestUtil.prepareTest(srcRoot,FileUtil.toFileObject(testBuildTo), cache);
+
+        if (doCompileRecursively) {
+            SourceUtilsTestUtil.compileRecursively(srcRoot);
+        }
+
+        final Document doc = getDocument(testSourceFO);
+        final List<HighlightImpl> highlights = new ArrayList<HighlightImpl>();
+
+        JavaSource source = JavaSource.forFileObject(testSourceFO);
+
+        assertNotNull(source);
+
+	final CountDownLatch l = new CountDownLatch(1);
+
+        source.runUserActionTask(new Task<CompilationController>() {
+            public void run(CompilationController parameter) {
+                try {
+                    parameter.toPhase(Phase.UP_TO_DATE);
+
+                    ErrorDescriptionSetterImpl setter = new ErrorDescriptionSetterImpl();
+
+                    performer.compute(parameter, doc, setter);
+
+                    highlights.addAll(setter.highlights);
+                } catch (IOException e) {
+                    e.printStackTrace();
+                } finally {
+		    l.countDown();
+		}
+            }
+        }, true);
+
+        l.await();
+
+        assertEquals(Arrays.asList(expected),
+                     highlights.stream()
+                               .map(h -> h.getHighlightTestData())
+                               .collect(Collectors.toList()));
     }
     
     public static Collection<HighlightImpl> toHighlights(Document doc, Map<Token, Coloring> colors) {
@@ -272,6 +367,14 @@ public abstract class TestBase extends NbTestCase {
         this.sourceLevel = sourceLevel;
     }
 
+    private List<String> extraOptions = new ArrayList<>();
+
+    protected final void enablePreview() {
+        String svName = SourceVersion.latest().name();
+        setSourceLevel(svName.substring(svName.indexOf('_') + 1));
+        extraOptions.add("--enable-preview");
+    }
+
     private boolean showPrependedText;
 
     protected final void setShowPrependedText(boolean showPrependedText) {
@@ -290,9 +393,9 @@ public abstract class TestBase extends NbTestCase {
         }
     
         @Override
-        public void setHighlights(Document doc, Collection<int[]> highlights, Map<int[], String> preText) {
-            for (int[] h : highlights) {
-                this.highlights.add(new HighlightImpl(doc, h[0], h[1], EnumSet.of(getColoringAttribute())));
+        public void setHighlights(Document doc, Collection<Pair<int[], Coloring>> highlights, Map<int[], String> preText) {
+            for (Pair<int[], Coloring> h : highlights) {
+                this.highlights.add(new HighlightImpl(doc, h.first()[0], h.first()[1], h.second()));
             }
             if (showPrependedText) {
                 for (Entry<int[], String> e : preText.entrySet()) {
